# Knightmare

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: api.md  architecture.md  index.md  installation.md  quickstart.md  training.md  uci.md
src/selfrl_chess/: __init__.py  __main__.py  board.py  cli.py  config.py  ema.py  encoding.py  eval.py  ingest.py  mcts.py  network.py  replay.py  selfplay.py  train.py  uci.py  utils.py
tests/: conftest.py  test_board.py  test_cli.py  test_encoding.py  test_mcts.py  test_network.py  test_replay.py  test_selfplay.py  test_uci.py
